--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>I am currently on an adventure.</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>I am from Jersey City, New Jersey.</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>I love working out, eating, and taking pictures of the sky.</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>My dream job is a marine biologist. </p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>Kissimmee, Florida</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>I want to learn something new and begin a new journey. </p>
     </section>
 
     <footer id="footer">
